Update api schema and clean up frontend styles
